added setting page and enhanced css

--- a/paragraph_review.html
+++ b/paragraph_review.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leitner Paragraph Review</title>
     <link rel="stylesheet" href="style/global.css">
-    <link rel="stylesheet" href="style/review.css">
+    <link rel="stylesheet" href="style/paragraph_review.css">
 </head>
 <body>
     <div class="container">
@@ -25,9 +25,10 @@
         </div>
         
         <div class="button-container" id="buttonContainer" style="display: none;">
-            <button id="newParagraph" onclick="window.location.href='text_loader.html'">New</button>
-            <button id="revealBtn">Reveal</button>
-            <button id="nextBtn">Next</button>
+            <button id="newParagraph" class="btn-secondary" onclick="window.location.href='text_loader.html'">New</button>
+            <button id="revealBtn" class="btn-secondary">Reveal</button>
+            <button id="settingsBtn" class="btn-secondary" onclick="window.location.href='settings.html'">⚙️</button>
+            <button id="nextBtn" class="btn-primary">Next</button>
         </div>
     </div>
 
