--- a/word_review.html
+++ b/word_review.html
@@ -39,9 +39,7 @@
 
         <div class="control-buttons">
             <button class="btn btn-secondary" id="addNewWordBtn" onclick="window.location.href='text_loader.html'">Add paragraph</button>
-            <button class="btn btn-success" id="checkAnswersBtn" style="display: none;">Check Answers</button>
-            <button class="btn btn-secondary" id="resetBtn" style="display: none;">Reset</button>
-            <button class="btn btn-primary" id="finishReviewBtn" style="display: none;">Finish Review</button>
+            <button class="btn btn-secondary" id="settingsBtn" onclick="window.location.href='settings.html'">⚙️ Settings</button>
         </div>
 
         <div id="loadingMessage" class="loading" style="display: none;">
