humberger menu+translation preview

--- a/paragraph_review.html
+++ b/paragraph_review.html
@@ -25,13 +25,12 @@
         </div>
         
         <div class="button-container" id="buttonContainer" style="display: none;">
-            <button id="newParagraph" class="btn-secondary" onclick="window.location.href='text_loader.html'">New</button>
             <button id="revealBtn" class="btn-secondary">Reveal</button>
-            <button id="settingsBtn" class="btn-secondary" onclick="window.location.href='settings.html'">⚙️</button>
             <button id="nextBtn" class="btn-primary">Next</button>
         </div>
     </div>
 
+    <script src="js/hamburger_menu.js"></script>
     <script src="js/indexdb.js"></script>
     <script src="js/word_db.js"></script>
     <script src="js/paragraphs_db.js"></script>
