--- a/settings.html
+++ b/settings.html
@@ -77,11 +77,10 @@
                         These actions cannot be undone. Make sure to backup your data first.
                     </div>
                 </div>
-            </div>
         </div>
         
         <div class="button-container">
-            <button id="backToAppBtn" class="btn-primary" onclick="window.location.href='text_loader.html'">Back to App</button>
+            <!-- Navigation button removed - now using hamburger menu -->
         </div>
         <div id="statusMessage" class="status-message"></div>
     </div>
@@ -102,6 +101,7 @@
         </div>
     </div>
 
+    <script src="js/hamburger_menu.js"></script>
     <script src="js/indexdb.js"></script>
     <script src="js/word_db.js"></script>
     <script src="js/paragraphs_db.js"></script>
