--- a/word_review.html
+++ b/word_review.html
@@ -38,8 +38,7 @@
         </div>
 
         <div class="control-buttons">
-            <button class="btn btn-secondary" id="addNewWordBtn" onclick="window.location.href='text_loader.html'">Add paragraph</button>
-            <button class="btn btn-secondary" id="settingsBtn" onclick="window.location.href='settings.html'">⚙️ Settings</button>
+            <!-- Navigation buttons removed - now using hamburger menu -->
         </div>
 
         <div id="loadingMessage" class="loading" style="display: none;">
@@ -61,6 +60,7 @@
 
     </div>
 
+    <script src="js/hamburger_menu.js"></script>
     <script src="js/indexdb.js"></script>
     <script src="js/word_db.js"></script>
     <script src="js/word_review_page.js"></script>
