style modifications+logic modifications

--- a/text_loader.html
+++ b/text_loader.html
@@ -16,9 +16,9 @@
         </div>
         
         <div class="button-container">
-            <button id="clearBtn" class="btn-accent" title="Clear">🗑️</button>
-            <button id="workspaceBtn" class="btn-secondary" title="Workspace">🗂️</button>
-            <button id="nextBtn" class="btn-primary" title="Next">➡️</button>
+            <button id="clearBtn" class="btn-secondary" title="Clear">Clear</button>
+            <button id="workspaceBtn" class="btn-secondary" title="Shelf">Shelf</button>
+            <button id="nextBtn" class="btn-primary" title="Next">Next</button>
         </div>
     </div>
 
@@ -32,6 +32,7 @@
             <textarea id="workspaceTextarea" placeholder="Your workspace content..."></textarea>
             <div class="modal-buttons">
                 <button id="workspaceClearBtn" class="btn-secondary">Clear</button>
+                <button id="workspacePasteBtn" class="btn-secondary">Paste</button>
                 <button id="moveChunkBtn" class="btn-primary">Move Chunk</button>
             </div>
         </div>
