bugs fixed, expression intro

--- a/word_review.html
+++ b/word_review.html
@@ -11,7 +11,7 @@
     <div class="review-container">
         <div class="review-header">
             <h1>Word Matching Exercise</h1>
-            <p>Drag words from the left column to match them with their translations on the right</p>
+            <p>Click on a Swedish word, then click on its English translation to match them</p>
         </div>
 
         <div class="review-stats">
