added expected time of response for word review

--- a/word_review.html
+++ b/word_review.html
@@ -70,6 +70,7 @@
             
             <div class="letter-controls">
                 <button class="btn btn-secondary" id="hintBtn">Hint</button>
+                <button class="btn btn-outline" id="undoBtn">Undo</button>
                 <button class="btn btn-outline" id="clearWordBtn">Clear</button>
             </div>
             
