inversed the logic for word selection in preview

--- a/text_loader.html
+++ b/text_loader.html
@@ -56,13 +56,13 @@
                     <button id="revealTranslationBtn" class="btn-secondary reveal-btn">Reveal</button>
                 </div>
                 <div class="overview-section">
-                    <h3>Phrases to Learn (click × to remove)</h3>
+                    <h3>Phrases to Learn (click + to add)</h3>
                     <div id="overviewWords" class="overview-words"></div>
                 </div>
             </div>
             <div class="modal-buttons">
-                <button id="overviewSaveBtn" class="btn-primary">Add to Database</button>
                 <button id="overviewCloseBtn" class="btn-secondary">Cancel</button>
+                <button id="overviewSaveBtn" class="btn-primary">Add to Database</button>
             </div>
         </div>
     </div>
